# GenODE-Inference

./: .gitattributes  .gitignore  LICENSE  README.md  lesson.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: context_conditional_opd.md  gipo.md  gipo_v4_3_pooled_one_round_plan.html  train20_stratified_hash_opd_plan.html
scripts/: build_hardness_mismatch_figure.py  build_ptg_observed_gain_figure.py  diffusion_flow_time_reparameterization.py  slurm_context_conditional_train_example.sh  slurm_gipo_train_example.sh  slurm_solar_train_backbone_example.sh  slurm_solar_v43_infer_20k_example.sh
scripts/legacy_archive_20260608/: legacy_gipo_script_archive_manifest.json
scripts/legacy_archive_20260608/verification_gipo_adaln_locked_multiaxis_ab_20260607/: 00_prepare_reused_artifacts.sbatch  02_train_adaln_locked.sbatch  03_report_locked_seen_unseen.sbatch  04_collect_ab_summary.sbatch  collect_adaln_ab_summary.py  submit_adaln_ab.sh
scripts/legacy_archive_20260608/verification_gipo_additive_locked_20260606/: 00_archive_legacy_results.sbatch  01_generate_artifacts.sbatch  02_train_additive_locked.sbatch  03_report_locked_seen_unseen.sbatch  04_collect_final_summary.sbatch  collect_additive_locked_summary.py  submit_additive_locked.sh  validate_additive_locked_artifacts.py
scripts/verification_density_diversity_20260603/: 01_calibration.sbatch  02_train_policy.sbatch  03_locked_report.sbatch  04_collect_summary.sbatch  05_submit_unseen_winner.sbatch  collect_density_diversity_summary.py  collect_unseen_density_diversity_summary.py  merge_density_diversity_inputs.py  submit_density_diversity.sh  submit_unseen_winner.sh  unseen_nfe_collect_summary.sbatch  unseen_nfe_report_policy.sbatch
scripts/verification_ess_bins_20260602/: 01_calibration.sbatch  02_train_policy.sbatch  03_locked_report.sbatch  04_collect_summary.sbatch  05_merge_calibration.sbatch  collect_summary.py  collect_unseen_nfe_summary.py  merge_calibration_inputs.py  resume_after_calibration_merge.sh  submit_unseen_nfe.sh  submit_verification.sh  unseen_nfe_collect_summary.sbatch  unseen_nfe_generate_inputs.sbatch  unseen_nfe_report_policy.sbatch
scripts/verification_gipo_locked_multiaxis_b64_checkpoint_maturity_20260608/: 01_generate_artifacts.sbatch  02_train_additive.sbatch  03_report_additive_seen_unseen.sbatch  04_collect_checkpoint_maturity_summary.sbatch  collect_checkpoint_maturity_summary.py  submit_checkpoint_maturity.sh
scripts/verification_gipo_locked_multiaxis_b64_final_ab_20260607/: 00_prepare_reused_artifacts.sbatch  02_train_adaln_locked.sbatch  02_train_additive_locked.sbatch  03_report_adaln_locked_seen_unseen.sbatch  03_report_additive_locked_seen_unseen.sbatch  04_collect_b64_final_ab_summary.sbatch  collect_b64_final_ab_summary.py  submit_b64_final_ab.sh  validate_locked_artifacts.py
scripts/verification_gipo_locked_multiaxis_b64_teacher_student_conditioning_ab_20260610/: 00_prepare_reused_artifacts.sbatch  02_train_teacher_adaln_student_additive_locked.sbatch  02_train_teacher_additive_student_adaln_locked.sbatch  03_report_teacher_adaln_student_additive_locked_seen_unseen.sbatch  03_report_teacher_additive_student_adaln_locked_seen_unseen.sbatch  04_collect_teacher_student_conditioning_ab_summary.sbatch  collect_teacher_student_conditioning_ab_summary.py  submit_teacher_student_conditioning_ab.sh  validate_locked_artifacts.py
scripts/verification_gipo_tfv1_contv3_20260604/: 01_generate_inputs.sbatch  02_train_tfv1_policies.sbatch  03_report_unseen_calibration.sbatch  04_collect_tfv1_summary.sbatch  collect_tfv1_summary.py  merge_tfv1_inputs.py  submit_gipo_tfv1_contv3.sh
scripts/verification_student_selection_20260603/: 01_prepare_inputs.sbatch  02_run_student_calibration_reports.sbatch  03_collect_selection.sbatch  04_locked_selected_report.sbatch  build_student_selection_inputs.py  collect_student_selection_summary.py  run_locked_selected_report.py  run_student_calibration_reports.py  submit_student_selection.sh
scripts/verification_teacher_student_gap_20260603/: 01_generate_inputs.sbatch  02_train_gap_policies.sbatch  03_report_unseen_calibration.sbatch  04_collect_gap_summary.sbatch  collect_gap_summary.py  merge_gap_inputs.py  submit_teacher_student_gap.sh
src/genode/: artifact_bundle.py  backbone_packages.py  canonical_experiment_layout.py  checkpoint_validation.py  cli.py  experiment_layout.py  path_safety.py  provenance.py  runtime.py  solver_protocol.py
src/genode/conditional_opd/: models.py  (+13 more)
tests/: test_backbone_matrix.py  test_backbone_packages.py  test_bo_candidate_pool.py  test_canonical_seen_unseen_layout.py  test_checkpoint_boundary_validation.py  test_conditional_opd_policy.py  test_context_conditional_opd.py  test_diffusion_flow_schedules.py  test_diffusion_flow_schedules_review_fixes.py  test_distillation.py  test_distillation_physical_identity.py  test_experiment_layout.py  test_generic_context_gipo.py  test_genode_interfaces.py  test_gipo.py  test_gipo_preflight.py  test_gipo_train_options.py  test_hardness_mismatch_figure.py  test_long_term_st.py  test_measurement_protocol.py  test_molecule_backbone.py  test_nine_dataset_matrix.py  test_opd_mlp_components.py  test_otflow_conditional_generation.py  test_otflow_conditional_generation_fixes.py  test_otflow_core.py  test_otflow_core_cleanup.py  test_otflow_extrapolation.py  test_otflow_extrapolation_fixes.py  test_otflow_paper_prep.py  test_otflow_reference_prep.py  test_otflow_sampling_api.py  test_packaging_hygiene.py  test_portability_safety.py  test_provenance.py  test_ptg_observed_gain_figure.py  test_quality_input_parsing.py  test_schedule_summary_evaluator.py  test_ser_ptg_reference.py  test_train20_candidate_pool.py  (+4 more)
(+112 files in other folders)
