[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genode"
version = "0.1.0"
description = "Independent genODE experiments for GIPO schedule optimization on OT flow-matching backbones."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "genODE contributors"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8,<4",
  "torch>=2.2",
  "wfdb>=4.1",
  "pyedflib>=0.1.38",
]

[project.scripts]
genode-run-schedules = "genode.evaluation.diffusion_flow_time_reparameterization:main"
genode-train-backbone = "genode.training.train_backbone:main"
genode-prepare-molecule-xyz = "genode.data.prepare_molecule_xyz:main"
genode-train-molecule-backbone = "genode.training.train_molecule_backbone:main"
genode-eval-molecule-backbone = "genode.evaluation.molecule_metrics:main"
genode-train-gipo = "genode.gipo.train_gipo:main"
genode-report-gipo-locked-test = "genode.gipo.report_locked_test:main"
genode-build-ser-ptg-reference = "genode.gipo.ser_ptg_reference:main"
genode-evaluate-schedule-summary = "genode.gipo.evaluate_schedule_summary:main"
genode-build-hardness-figure = "genode.visualization.build_hardness_mismatch_figure:main"
genode-build-ptg-figure = "genode.visualization.build_ptg_observed_gain_figure:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"genode.schedule_transfer" = ["otflow_external_schedule_catalog.json"]
